Abrechnungslauf ohne SEPA File Abfrage (#136)
* Abrechnungslauf ohne SEPA File Abfrage

Erlaube einen Abrechnungslauf ohne eine XML Datei zu generieren.

* fix deprecated Long und RoundingMode

* Fix Dateiausgabe und 1 Cent Überweisung

Es wird jetzt auch oben ausgegeben wenn eine XML Datei geschrieben wurde
Bei eine 1Cent Überweisung wird nur Hibiscus und Datei zur Auswahl angeboten (neuer enum für die Auswahl)

* Fix Hibiscus Ausgabe Meldung

Ausgabe nur wenn wirklich eine Übergabe erfolgt ist